# iotmp-benchmarks

./: .gitignore  LICENSE  README.md  RESULTS.md
encoding/: README.md  build.sh  encoding_results.txt
encoding/cbor/: CMakeLists.txt  README.md
encoding/cbor/components/nanocbor/: CMakeLists.txt
encoding/cbor/main/: CMakeLists.txt  main.c
encoding/pson/: CMakeLists.txt
encoding/pson/main/: main.c  pson_decode.h  pson_encode.h
encoding/tinycbor/: CMakeLists.txt
encoding/tinycbor/components/tinycbor/: CMakeLists.txt
encoding/tinycbor/main/: CMakeLists.txt  main.c
protocol/: README.md  build.sh  common_wifi.h
protocol/coap/: CMakeLists.txt  sdkconfig.defaults
protocol/coap/main/: CMakeLists.txt  idf_component.yml  main.c
protocol/http/: CMakeLists.txt
protocol/http/main/: main.c
protocol/iotmp/: CMakeLists.txt
protocol/iotmp/main/: main.cpp
protocol/mqtt/: CMakeLists.txt
protocol/mqtt/main/: main.c
wire-comparison/: README.md  wire_comparison.cpp
